removed create. refactored service for cleaner readability
